--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -5,8 +5,10 @@
    "metadata": {},
    "source": [
     "# Evaluation: Precision & Recall\n",
-    "## Using the evaluation metrics we have learned, we are going to compare how well some different types of classifiers perform on different evaluation metrics\n",
-    "### We are going to use a dataset of written numbers which we can import from sklearn. Run the code below to do so. \n"
+    "\n",
+    "Using the evaluation metrics we have learned, we are going to compare how well some different types of classifiers perform on different evaluation metrics.\n",
+    "\n",
+    "We are going to use a dataset of written numbers which we can import from sklearn. Run the code below to do so. "
    ]
   },
   {
@@ -15,9 +17,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.datasets import fetch_mldata\n",
-    "mnist = fetch_mldata('MNIST original')\n",
+    "# Libraries\n",
+    "from sklearn.datasets import fetch_openml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "mnist = fetch_openml('mnist_784')\n",
     "X, y = mnist['data'], mnist['target']"
    ]
   },
@@ -25,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now take a look at the shapes of the X and y matricies "
+    "#### Now take a look at the shapes of the X and y matrices."
    ]
   },
   {
@@ -33,13 +44,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, let's pick one entry and see what number is written. Use indexing to pick the 36000th digit"
+    "#### Let's pick one entry and see what number is written. Use indexing to pick the 36000th digit."
    ]
   },
   {
@@ -47,13 +60,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### You can use the .reshape(28,28) function and plt.imshow() function with the parameters cmap = matplotlib.cm.binary, interpolation=\"nearest\" to make a plot of the number. Be sure to import matplotlib!"
+    "####  Use the *reshape(28,28)* method and *plt.imshow()* function with the parameters *cmap = matplotlib.cm.binary* and *interpolation=\"nearest\"* to make a plot of the number. Be sure to import matplotlib."
    ]
   },
   {
@@ -61,13 +76,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use indexing to see if what the plot shows matches with the outcome of the 36000th index"
+    "#### Use indexing to see if what the plot shows matches with the outcome of the 36000th index."
    ]
   },
   {
@@ -75,13 +92,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now lets break into a test train split to run a classification. Instead of using sklearn, use indexing to select the first 60000 entries for the training, and the rest for training."
+    "#### Now lets break into a test train split to run a classification. Instead of using sklearn, use indexing to select the first 60000 entries for the training and the rest for testing."
    ]
   },
   {
@@ -89,13 +108,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We are going to make a two-class classifier, so lets restrict to just one number, for example 5s. Do this by defining a new y training and y testing sets for just the number 5"
+    "#### We are going to make a two-class classifier, so lets restrict to just one number, for example 5s. Do this by defining a new y training and y testing sets for just the number 5."
    ]
   },
   {
@@ -103,13 +124,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lets train a logistic regression to predict if a number is a 5 or not (remember to use the 'just 5s' y training set!)"
+    "#### Lets train a logistic regression to predict if a number is a 5 or not. Remember to use the 'just 5s' target train array."
    ]
   },
   {
@@ -117,13 +140,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Does the classifier predict correctly the 36000th digit we picked before?"
+    "#### Does the classifier predict correctly the 36000th digit we picked before?"
    ]
   },
   {
@@ -131,13 +156,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your comments here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To make some comparisons, we are going to make a very dumb classifier, that never predicts 5s. Build the classifier with the code below, and call it using: never_5_clf = Never5Classifier()"
+    "#### The 35th value is a 5. Check if it was correctly predicted."
    ]
   },
   {
@@ -146,12 +182,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.base import BaseEstimator\n",
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your comments here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To make some comparisons, we are going to make a very dumb classifier, that never predicts 5s. Build the classifier with the code below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Libraries\n",
+    "from sklearn.base import BaseEstimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dumb classifier\n",
     "class Never5Classifier(BaseEstimator):\n",
     "    def fit(self, X, y=None):\n",
     "        pass\n",
     "    def predict(self, X):\n",
-    "        return np.zeros((len(X), 1), dtype=bool)\n",
+    "        return np.zeros((len(X), 1))[:, 0]\n",
     "\n",
     "never_5_clf = Never5Classifier()"
    ]
@@ -160,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now lets fit and predict on the testing set using our never 5 Classifier"
+    "#### Now lets fit and predict on the testing set using our dumb classifier."
    ]
   },
   {
@@ -168,13 +239,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's compare this to the Logistic Regression. Examine the confusion matrix, precision, recall, and f1_scores for each. What is the probability cutoff you are using to decide the classes?"
+    "#### Let's compare this to the Logistic Regression. Examine the confusion matrix, precision, recall, and f1_scores for each. What is the probability cutoff you are using to decide the classes?"
    ]
   },
   {
@@ -182,13 +255,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What are the differences you see? Without knowing what each model is, what can these metrics tell you about how well each works?"
+    "#### What are the differences you see? Without knowing what each model is, what can these metrics tell you about how well each works?"
    ]
   },
   {
@@ -196,13 +271,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your answer here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now let's examine the roc_curve for each. Use the roc_curve method from sklearn.metrics to help plot the curve for each"
+    "#### Now let's examine the roc_curve for each. Use the roc_curve method from sklearn.metrics to help plot the curve for each."
    ]
   },
   {
@@ -210,13 +287,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now find the roc_auc_score for each. "
+    "#### Now find the roc_auc_score for each. "
    ]
   },
   {
@@ -224,13 +303,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What does this metric tell you? Which classifier works better with this metric in mind?"
+    "#### What does this metric tell you? Which classifier works better with this metric in mind?"
    ]
   },
   {
@@ -238,7 +319,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your answer here"
+   ]
   }
  ],
  "metadata": {
@@ -257,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
